Update Framework to use the phantomJS and fix some problems of Selenium GRID integration

--- a/src/main/resources/com/liferay/gs/configuration.properties
+++ b/src/main/resources/com/liferay/gs/configuration.properties
@@ -1,11 +1,12 @@
 environment=http://www.google.com.br
 linkToLogOut=:8080/c/portal/logout
-SeleniumGridMachine=http://10.0.40.32:5555/wd/hub
-#The browser atribute to use SELENIUM GRID should be received: firefox, chrome, safari, ie, phantomjs.
+SeleniumGridMachine=http://cloud-10-0-40-32:5555/wd/hub
+#The browser atribute to use SELENIUM GRID should be received: firefox, chrome, ie, phantomjs.
 #For use a localhost configuration (Selenium IDE) set to use "default".
 browser=default
-time-out=35
+time-out=30
 
 valid-up-to-firefox-version=49
 
-PhantomJS_Path=[PATH-TO-PHANTOMJS-INSTALLATION-DIR]/bin/phantomjs
+PhantomJS_Path=/Users/manoelcyreno/Projetos/Selenium/gs-selenium-commons/src/main/executables/phantomjs-2.1.1-macosx/bin/phantomjs
+GeckoDriver_Path=/Users/manoelcyreno/Projetos/Selenium/gs-selenium-commons/src/main/executables/geckodriver
