Update Framework to local and external attach file, take screenshot and remove the trash created by local attach file

--- a/src/main/resources/com/liferay/gs/configuration.properties
+++ b/src/main/resources/com/liferay/gs/configuration.properties
@@ -10,3 +10,6 @@ valid-up-to-firefox-version=49
 
 PhantomJS_Path=/Users/manoelcyreno/Projetos/Selenium/gs-selenium-commons/src/main/executables/phantomjs-2.1.1-macosx/bin/phantomjs
 GeckoDriver_Path=/Users/manoelcyreno/Projetos/Selenium/gs-selenium-commons/src/main/executables/geckodriver
+
+#The standard of the files should be: 01.jpg until 05.jpg
+PathWithAttachFiles=C:\\\\screenshots\\
