Update the Framework to have a package related to the test framework

--- a/src/main/resources/com/liferay/gs/testFramework/configuration.properties
+++ b/src/main/resources/com/liferay/gs/testFramework/configuration.properties
@@ -12,4 +12,5 @@ PhantomJS_Path=/Users/manoelcyreno/Projetos/Selenium/gs-selenium-commons/src/mai
 GeckoDriver_Path=/Users/manoelcyreno/Projetos/Selenium/gs-selenium-commons/src/main/executables/geckodriver
 
 #The standard of the files should be: 01.jpg until 05.jpg
+#This Path will be used on Remote Browsers (by Selenium Grid)
 PathWithAttachFiles=C:\\\\screenshots\\
