Remove the executable files fom repository and improve the configuration to use the framework

--- a/src/main/resources/com/liferay/gs/testFramework/configuration.properties
+++ b/src/main/resources/com/liferay/gs/testFramework/configuration.properties
@@ -1,16 +1,4 @@
-environment=http://www.google.com.br
-linkToLogOut=:8080/c/portal/logout
-SeleniumGridMachine=http://cloud-10-0-40-32:5555/wd/hub
-#The browser atribute to use SELENIUM GRID should be received: firefox, chrome, ie, phantomjs.
-#For use a localhost configuration (Selenium IDE) set to use "default".
-browser=default
-time-out=30
+defaultPropertiesFile=/opt/liferay/defaulProperties.properties
 
-valid-up-to-firefox-version=49
-
-PhantomJS_Path=/Users/manoelcyreno/Projetos/Selenium/gs-selenium-commons/src/main/executables/phantomjs-2.1.1-macosx/bin/phantomjs
-GeckoDriver_Path=/Users/manoelcyreno/Projetos/Selenium/gs-selenium-commons/src/main/executables/geckodriver
-
-#The standard of the files should be: 01.jpg until 05.jpg
-#This Path will be used on Remote Browsers (by Selenium Grid)
-PathWithAttachFiles=C:\\\\screenshots\\
+PhantomJS_Path=/opt/liferay/web_drivers/phantomjs/bin/phantomjs
+GeckoDriver_Path=/opt/liferay/web_drivers/geckodriver
