--- a/src/main/resources/com/liferay/gs/testFramework/configuration.properties
+++ b/src/main/resources/com/liferay/gs/testFramework/configuration.properties
@@ -1,4 +1,5 @@
 defaultPropertiesFile=/opt/liferay/defaulProperties.properties
 
+webDrivers_Path=/opt/liferay/web_drivers
 PhantomJS_Path=/opt/liferay/web_drivers/phantomjs/bin/phantomjs
 GeckoDriver_Path=/opt/liferay/web_drivers/geckodriver
