--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,3 @@
-/*
-	gradle clean test 		- Rebuild and run tests
-	gradle test 			- Run tests only
-	gradle cleanTest test  	- Force tests to be run even if up to date
-	gradle viewResults		- Displays the report of test results (Windows only)
-*/
-
-// Support for building and testing
-
 plugins {
     id "com.jfrog.bintray" version "1.7"
     id "de.undercouch.download" version "3.1.2"
@@ -15,53 +6,56 @@ plugins {
 
 repositories {
   jcenter()
+  mavenCentral()
+  mavenLocal()
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'java'
+apply plugin: 'eclipse'
 
 
 publishing {
 	publications {
-		selelinumBintrayPub(MavenPublication) {
-			from components.java
-			groupId 'com.liferay.gs.commons'
-      artifactId 'lfrgs-selenium-commons'
-      version '0.5.0'
-		}
+	    mavenJava(MavenPublication) {
+    		from components.java
+				artifact sourcesJar
+            	artifact javadocJar
+        }
 	}
 }
 
+group = 'com.liferay.gs'
+version = '0.5.1'
+
 bintray {
-    user = System.getenv('BINTRAY_USER')
-    key = System.getenv('BINTRAY_KEY')
-    publications = ['selelinumBintrayPub']
+    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+	key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    publications = ['mavenJava']
     pkg {
         repo = 'maven'
         name = 'lfrgs-selenium-commons'
-        userOrg = System.getenv('BINTRAY_USER')
-        labels = ['test', 'selenium', 'liferay', 'gs']
+        desc = 'lfrgs-selenium-commons'
+		licenses = ['Apache-2.0']
+		userOrg = System.getenv('BINTRAY_USER')
+        labels = ['lfrgs-selenium-commons', 'test', 'selenium', 'liferay', 'gs']
         licenses = ['Apache-2.0']
         publicDownloadNumbers = true
         vcsUrl = 'https://github.com/gallindo/lfrgs-selenium-commons.git'
         version {
-            name = '0.5.0'
-            desc = 'Selenium framework for Liferay GS projects'
+            name = 'project.version'
+            desc = 'lfrgs-selenium-commons: Selenium framework for Liferay GS projects'
             released  = new Date()
-            vcsTag = '0.5.0'
-            //attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
+            vcsTag = 'project.version'
         }
     }
 }
 
-// Cf. Maven properties
 ext.junitVersion = '4.12'
 ext.seleniumVersion = '3.0.0'
 
-
-// Cf. Maven <dependencies>
 dependencies {
 	compile group: 'junit', name: 'junit', version:junitVersion
 	compile group: 'org.seleniumhq.selenium', name: 'selenium-firefox-driver', version:seleniumVersion
@@ -70,6 +64,24 @@ dependencies {
 	compile group: 'org.seleniumhq.selenium', name: 'selenium-remote-driver', version:seleniumVersion
 	compile group: 'org.seleniumhq.selenium', name: 'selenium-support', version:seleniumVersion
 }
+
+
+// custom tasks for creating source/javadoc jars
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+// add javadoc/source jar tasks as artifacts
+artifacts {
+    archives sourcesJar, javadocJar
+}
+
 
 // A custom task to show report on tests that have run
 task viewResults(dependsOn: ['test'] , type:Exec) {
@@ -150,10 +162,4 @@ task setupSelenium(){
             into webDriversFile
         }
     }
-}
-
-// Resolve Maven dependencies as Maven does
-repositories {
-	mavenCentral()
-	mavenLocal()
 }
