--- a/build.gradle
+++ b/build.gradle
@@ -45,10 +45,10 @@ bintray {
         publicDownloadNumbers = true
         vcsUrl = 'https://github.com/gallindo/lfrgs-selenium-commons.git'
         version {
-            name = 'project.version'
+            name = project.version
             desc = 'lfrgs-selenium-commons: Selenium framework for Liferay GS projects'
             released  = new Date()
-            vcsTag = 'project.version'
+            vcsTag = project.version
         }
     }
 }
