Update the config file to be able to execute on Windows platform

--- a/src/main/resources/com/liferay/gs/testFramework/configurationWin.properties
+++ b/src/main/resources/com/liferay/gs/testFramework/configurationWin.properties
@@ -1,6 +1,6 @@
 defaultPropertiesFile=C://liferay//defaultProperties.properties
 
 webDrivers_Path=C://liferay//web_drivers
-PhantomJS_Path=C://liferay//web_drivers//phantomjs//bin//phantomjs
-GeckoDriver_Path=C://liferay//web_drivers//geckodriver
-ChromeDriver_Path=C://liferay//web_drivers//chromedriver
+PhantomJS_Path=C://liferay//web_drivers//phantomjs//bin//phantomjs.exe
+GeckoDriver_Path=C://liferay//web_drivers//geckodriver.exe
+ChromeDriver_Path=C://liferay//web_drivers//chromedriver.exe
