Change the property name to SeleniumPropertyKeys

--- a/src/main/resources/com/liferay/gs/testFramework/configurationWin.properties
+++ b/src/main/resources/com/liferay/gs/testFramework/configurationWin.properties
@@ -1,4 +1,4 @@
-defaultPropertiesFile=C://liferay//defaultProperties.properties
+SeleniumPropertyKeys=C://liferay//SeleniumPropertyKeys.properties
 
 webDrivers_Path=C://liferay//web_drivers
 PhantomJS_Path=C://liferay//web_drivers//phantomjs//bin//phantomjs.exe
