--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,7 @@
 plugins {
     id "com.jfrog.bintray" version "1.7"
     id "de.undercouch.download" version "3.1.2"
-}
-
-
-repositories {
-  jcenter()
-  mavenCentral()
-  mavenLocal()
+    id "com.gradle.plugin-publish" version "0.9.9"
 }
 
 apply plugin: 'maven'
@@ -15,26 +9,26 @@ apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: "com.gradle.plugin-publish"
 
+dependencies {
+    compile gradleApi()
+    compile localGroovy()
+}
 
-publishing {
-	publications {
-	    mavenJava(MavenPublication) {
-    		from components.java
-				artifact sourcesJar
-            	artifact javadocJar
-        }
-	}
+repositories {
+  jcenter()
+  mavenCentral()
+  mavenLocal()
 }
 
 description = """Liferay GS Selenium Commons Framework"""
-
-group = 'com.liferay.gs'
 
 // Version X.Y.Z = X, When changing the API
 // Version X.Y.Z = Y, When adding features while maintaining compatibility
 // Version X.Y.Z = Z, When to fix failures while maintaining compatibility
 version = '2.1.3'
+group = 'com.liferay.gs'
 
 bintray {
     user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
@@ -46,7 +40,7 @@ bintray {
         desc = 'lfrgs-selenium-commons'
 		licenses = ['Apache-2.0']
 		userOrg = System.getenv('BINTRAY_USER')
-        labels = ['lfrgs-selenium-commons', 'test', 'selenium', 'liferay', 'gs']
+        labels = ['lfrgs-selenium-commons', 'test', 'selenium', 'liferay', 'gs', 'funtionaltest', 'BDD', 'aceptancetest']
         licenses = ['Apache-2.0']
         publicDownloadNumbers = true
         vcsUrl = 'https://github.com/manoelcyreno/lfrgs-selenium-commons.git'
@@ -57,6 +51,23 @@ bintray {
             vcsTag = project.version
         }
     }
+}
+
+pluginBundle {
+System.setProperty('gradle.publish.key', project.properties['gradle.publish.key'] ?: System.getenv('GRADLE_PUBLISH_KEY'))
+System.setProperty('gradle.publish.secret', project.properties['gradle.publish.secret'] ?: System.getenv('GRADLE_PUBLISH_SECRET'))
+
+  website = 'https://github.com/manoelcyreno/lfrgs-selenium-commons'
+  vcsUrl = 'https://github.com/manoelcyreno/lfrgs-selenium-commons'
+  description = 'lfrgs-selenium-commons: Selenium framework for Liferay GS projects!'
+  tags = ['lfrgs-selenium-commons', 'test', 'selenium', 'liferay', 'gs', 'funtionaltest', 'BDD', 'aceptancetest']
+
+  plugins {
+    seleniumCommonsPlugin {
+      id = 'com.liferay.gs.testFramework'
+      displayName = 'Liferay GS Selenium Commons Framework'
+    }
+  }
 }
 
 ext.junitVersion = '4.12'
