--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "com.jfrog.bintray" version "1.7"
     id "de.undercouch.download" version "3.1.2"
     id "com.gradle.plugin-publish" version "0.9.9"
+    id "org.sonarqube" version "2.7"
 }
 
 apply plugin: 'maven'
