--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,13 @@ repositories {
   mavenLocal()
 }
 
-description = """Liferay GS Selenium Commons Framework"""
+description = """Selenium Commons Framework"""
 
 // Version X.Y.Z = X, When changing the API
 // Version X.Y.Z = Y, When adding features while maintaining compatibility
 // Version X.Y.Z = Z, When to fix failures while maintaining compatibility
-version = '3.0.1'
-group = 'com.liferay.gs'
+version = '4.0.0'
+group = 'com.selenium.commons'
 // custom tasks for creating source/javadoc jars
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
@@ -63,11 +63,15 @@ publishing {
 	}
 }
 
-ext.junitVersion = '4.12'
-ext.seleniumVersion = '3.5.2'
+ext.junitVersion = '5.6.2'
+ext.junitRunnerVersion = '1.6.2'
+ext.rerunnerJunitVersion = '2.1.6'
+ext.seleniumVersion = '4.0.0-alpha-6'
 
 dependencies {
-	compile group: 'junit', name: 'junit', version:junitVersion
+	compile group: 'org.junit.jupiter', name: 'junit-jupiter', version:junitVersion
+	compile group: 'org.junit.platform', name: 'junit-platform-runner', version:junitRunnerVersion
+	compile group: 'io.github.artsok', name: 'rerunner-jupiter', version:rerunnerJunitVersion
 	compile group: 'org.seleniumhq.selenium', name: 'selenium-firefox-driver', version:seleniumVersion
 	compile group: 'org.seleniumhq.selenium', name: 'selenium-api', version:seleniumVersion
 	compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version:seleniumVersion
@@ -79,12 +83,12 @@ pluginBundle {
   website = 'https://github.com/manoelcyreno/selenium-commons'
   vcsUrl = 'https://github.com/manoelcyreno/selenium-commons'
   description = 'Selenium framework for web projects!'
-  tags = ['frw-selenium-commons', 'test', 'selenium', 'liferay', 'gs', 'funtionaltest', 'BDD', 'aceptancetest']
+  tags = ['frw-selenium-commons', 'test', 'selenium', 'liferay', 'funtionaltest', 'BDD', 'aceptancetest']
 
   plugins {
     seleniumCommonsPlugin {
-      id = 'com.liferay.gs.testFramework'
-      displayName = 'Liferay GS Selenium Commons Framework'
+      id = 'com.selenium.commons.testFramework'
+      displayName = 'Selenium Commons Framework'
     }
   }
 }
@@ -99,7 +103,7 @@ bintray {
         desc = 'Common Selenium framework'
 		licenses = ['Apache-2.0']
 		userOrg = System.getenv('BINTRAY_USER')
-        labels = ['frw-selenium-commons', 'test', 'selenium', 'liferay', 'gs']
+        labels = ['frw-selenium-commons', 'test', 'selenium', 'liferay']
         licenses = ['Apache-2.0']
         publicDownloadNumbers = true
         vcsUrl = 'https://github.com/manoelcyreno/selenium-commons'
@@ -108,7 +112,7 @@ bintray {
             desc = 'Common Selenium framework'
             released  = new Date()
             vcsTag = project.version
-            attributes = ['gradle-plugin': 'gradle.plugin.com.liferay.gs.testFramework:frw-selenium-commons']
+            attributes = ['gradle-plugin': 'gradle.plugin.com.selenium.commons.testFramework:frw-selenium-commons']
         }
     }
 }
